; ModuleID = '/home/carl/AnghaBench/freebsd/cddl/contrib/opensolaris/cmd/ztest/extr_ztest.c_user_release_one.c'
source_filename = "/home/carl/AnghaBench/freebsd/cddl/contrib/opensolaris/cmd/ztest/extr_ztest.c_user_release_one.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @user_release_one to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @user_release_one(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = call i32* (...) @fnvlist_alloc()
  store i32* %8, i32** %5, align 8
  %9 = call i32* (...) @fnvlist_alloc()
  store i32* %9, i32** %6, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = call i32 @fnvlist_add_boolean(i32* %10, i8* %11)
  %13 = load i32*, i32** %5, align 8
  %14 = load i8*, i8** %3, align 8
  %15 = load i32*, i32** %6, align 8
  %16 = call i32 @fnvlist_add_nvlist(i32* %13, i8* %14, i32* %15)
  %17 = load i32*, i32** %6, align 8
  %18 = call i32 @fnvlist_free(i32* %17)
  %19 = load i32*, i32** %5, align 8
  %20 = call i32 @dsl_dataset_user_release(i32* %19, i32* null)
  store i32 %20, i32* %7, align 4
  %21 = load i32*, i32** %5, align 8
  %22 = call i32 @fnvlist_free(i32* %21)
  %23 = load i32, i32* %7, align 4
  ret i32 %23
}

declare dso_local i32* @fnvlist_alloc(...) #1

declare dso_local i32 @fnvlist_add_boolean(i32*, i8*) #1

declare dso_local i32 @fnvlist_add_nvlist(i32*, i8*, i32*) #1

declare dso_local i32 @fnvlist_free(i32*) #1

declare dso_local i32 @dsl_dataset_user_release(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
